# Art-Gallery

./: .gitignore  Cargo.toml
Models/: 3d-model.stl  ArtGallery.FCStd  Final_AG.FCStd  The art gallery.stl
docs/: CHANGES.md
shaders/: depth.frag  depth.vert  emissive.frag  room.frag  room.vert  sphere.frag  sphere.vert
src/: camera.rs  environment.rs  geometry.rs  lighting.rs  main.rs  scratch_mesh.rs  shader.rs  texture.rs
src/docs/: system_architecture.md
